Add performance tests for projects with lots of modules