@@ -61,8 +61,8 @@ public class BootstrappingTest extends PerfTestCase {
 
     SonarRunner runner = SonarRunner.create()
       .setProperties(
-        "sonar.projectKey", "many-modules",
-        "sonar.projectName", "Many Modules",
+        "sonar.projectKey", "many-flat-modules",
+        "sonar.projectName", "Many Flat Modules",
         "sonar.projectVersion", "1.0",
         "sonar.sources", "",
         "sonar.showProfiling", "true")
@@ -73,6 +73,56 @@ public class BootstrappingTest extends PerfTestCase {
     long start = System.currentTimeMillis();
     orchestrator.executeBuild(runner);
     long duration = System.currentTimeMillis() - start;
+    // First analysis
+    assertDurationAround(duration, 4000L);
+
+    start = System.currentTimeMillis();
+    orchestrator.executeBuild(runner);
+    duration = System.currentTimeMillis() - start;
+    // Second analysis
+    assertDurationAround(duration, 4000L);
+  }
+
+  @Test
+  public void analyzeProjectWith100NestedModules() throws IOException {
+    int SIZE = 100;
+
+    File baseDir = temp.newFolder();
+    File currentDir = baseDir;
+
+    for (int i = 1; i <= SIZE; i++) {
+      File projectProps = new File(currentDir, "sonar-project.properties");
+      FileUtils.write(projectProps, "sonar.modules=module" + i + "\n", true);
+      if (i >= 1) {
+        FileUtils.write(projectProps, "sonar.moduleKey=module" + (i - 1), true);
+      }
+      File moduleDir = new File(currentDir, "module" + i);
+      moduleDir.mkdir();
+      currentDir = moduleDir;
+    }
+    FileUtils.write(new File(currentDir, "sonar-project.properties"), "sonar.moduleKey=module" + SIZE, true);
+
+    SonarRunner runner = SonarRunner.create()
+      .setProperties(
+        "sonar.projectKey", "many-nested-modules",
+        "sonar.projectName", "Many Nested Modules",
+        "sonar.projectVersion", "1.0",
+        "sonar.sources", "",
+        "sonar.showProfiling", "true")
+      .setEnvironmentVariable("SONAR_RUNNER_OPTS", "-Xmx512m -server -XX:MaxPermSize=64m")
+      .setRunnerVersion("2.4")
+      .setProjectDir(baseDir);
+
+    long start = System.currentTimeMillis();
+    orchestrator.executeBuild(runner);
+    long duration = System.currentTimeMillis() - start;
+    // First analysis
+    assertDurationAround(duration, 4000L);
+
+    start = System.currentTimeMillis();
+    orchestrator.executeBuild(runner);
+    duration = System.currentTimeMillis() - start;
+    // Second analysis
     assertDurationAround(duration, 4000L);
   }
 
